    mechanism used in *graphical* user interfaces
  - added DropDownBox (basically an edit widget with a list of choices to
    drop down)
  - TextWidget: Now sends a "Chosen" event when ENTER is pressed in line mode.
    This is interpreted e.g. by the DropDownBox.
  - UI headers are now expected in "${prefix}/include/gwenhywfar/ui"
- parser/xml: now accepts simple tags (like "<br>" or "<hr>") without
  ending tags (e.g. there is no more need for "<br/>").
  This allows to use simple HTML for texts in TextWidget and derived classes.
- configure.ac, gwenhywfar-config.in.in:
  - added checks and switches to determine whether UI or crypto support is
    compiled into Gwenhywfar
  - UI headers are installed to ${prefix}/include/gwenhywfar/ui


2004/06/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui:
  - nearly completed MessageBox
  - reworked XML->text parsing of TextWidget
  - close events do now work
  - provide more control over event handling for applications


2004-06-24   Christian Stimming <stimming@tuhh.de>

	* configure.ac, src/Makefile.am: Make the compilation of the UI
	module conditional on whether ncurses is available. If it is not
	there, then the whole GWEN_UI module will neither be compiled nor
	installed.


2004/06/24: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui: 
  - added Close-events
  - added ScrollWidget (which basically is a widget with optional vertical
    and horizontal scroll bars)
  - started working on GWEN_MessageBox


2004/06/23: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ui: added Button and a command event emitted by buttons (or menus later)
  This will allow me to create a Message class and a TextBrowser module
  tomorrow (hopefully).


2004/06/22: Martin Preuss<martin@libchipcard.de>
------------------------------------------------