@@ -21,6 +21,8 @@
   - TextWidget: Now sends a "Chosen" event when ENTER is pressed in line mode.
     This is interpreted e.g. by the DropDownBox.
   - UI headers are now expected in "${prefix}/include/gwenhywfar/ui"
+  - focus can now be changed to the nex *AND* to the previously active
+    widget ;-)
 - parser/xml: now accepts simple tags (like "<br>" or "<hr>") without
   ending tags (e.g. there is no more need for "<br/>").
   This allows to use simple HTML for texts in TextWidget and derived classes.
@@ -28,6 +30,11 @@
   - added checks and switches to determine whether UI or crypto support is
     compiled into Gwenhywfar
   - UI headers are installed to ${prefix}/include/gwenhywfar/ui
+- base/misc.h:
+  - added functions which allow traversing a list backwards.
+    However, these functions aren't very fast since the lists are only
+    simple-linked. But using these new functions allows to silently use
+    optimized versions later
 
 
 2004/06/25: Martin Preuss<martin@libchipcard.de>
